Version 0.3.5 IE 6 and 7 Support
- Added support for IE 6 and 7.
- Ajax redraw supported by Prototype, JQuery and JBoss Richfaces expressively

Version 0.3.0 Click Action, Improved Drag effect, valueChangeListener replaced with actionListener
- Changed the ID naming of some of the rendered DOM elements to match the JSF ID naming Scheme
- Improved the Drag effect, so that extending the standard Flotr library is not needed
- Updated Flotr to Revision 125
- JSFlot is silent unless debug="true" is set on the jsflot:resources tag.
- Added click Event. The JSFlot actionListener is called when a datapoint is clicked. 
- Removed ValueChangeListener on drag event, replaced with actionEvent
- Live Demo much improved

Version 0.2.5 JSMin, ajaxSingle, reRender
- Added JSMin to ResourceLoaderPhaseListener to automatically pack all Javascript files served from JSFlot. This effectively halves the size of all Javascript files transferred to the client. (http://inconspicuous.org/projects/jsmin/jsmin.java)
- Added ajaxSingle for single-chart ajax submit (complete form is not submittet)
- Added reRender attribute to update parts of the DOM tree, identified by the JSF ID attribute (Not the complete ClientID)

Version 0.2.2 Stacked Bars
- Added support for Stacked Bars
- Added a JS function to refresh the chart via an AJAX call. JSFlot.AJAX.RefreshChart('chartID');
- Changed the visualization for drag and drop support
- Changed Time mode to reuse Flotrs Time mode, and added a time format option. 

Version 0.2.1 Support for non-facelets
- Added Tag classes to be able to support non-facelets JSF 1.2 applications

Version 0.2.0 Drag and Drop Support
- Added support for dragging the X-axis and triggering a ValueChangeEvent with the number of X-axis values dragged. 
- Added AJAX support for valueChangeListener, as well as re-drawing of the chart based on the result of the valueChangedEvent
- Added JavaScript library blackbird Javascript library for Javascript Debugging of JSFlot.  